fix input on mobile

--- a/src/main/app/components/input/input.scss
+++ b/src/main/app/components/input/input.scss
@@ -14,6 +14,7 @@
   outline: none;
   box-sizing: border-box;
   box-shadow: none;
+  -webkit-appearance: none;
 
   &::placeholder{
     color: #A5AEB1;
